@@ -17,20 +17,17 @@
 package org.apache.solr.cli;
 
 import java.io.IOException;
-import java.io.PrintStream;
 import java.nio.file.Files;
 import java.nio.file.Path;
-import java.nio.file.Paths;
-import java.util.List;
+import java.nio.file.StandardCopyOption;
 import java.util.Locale;
-import java.util.Map;
 import java.util.Set;
 import java.util.concurrent.TimeUnit;
 import org.apache.commons.cli.CommandLine;
-import org.apache.commons.cli.DeprecatedAttributes;
 import org.apache.commons.cli.Option;
-import org.apache.commons.io.FileUtils;
+import org.apache.commons.cli.Options;
 import org.apache.commons.io.file.PathUtils;
+import org.apache.solr.cli.CommonCLIOptions.DefaultValues;
 import org.apache.solr.client.solrj.SolrClient;
 import org.apache.solr.client.solrj.SolrRequest;
 import org.apache.solr.client.solrj.SolrServerException;
@@ -43,7 +40,6 @@ import org.apache.solr.client.solrj.request.GenericSolrRequest;
 import org.apache.solr.client.solrj.response.CoreAdminResponse;
 import org.apache.solr.cloud.ZkConfigSetService;
 import org.apache.solr.common.cloud.ZkStateReader;
-import org.apache.solr.common.params.CollectionAdminParams;
 import org.apache.solr.common.params.CommonParams;
 import org.apache.solr.common.util.NamedList;
 import org.apache.solr.core.ConfigSetService;
@@ -53,12 +49,55 @@ import org.noggit.JSONWriter;
 /** Supports create command in the bin/solr script. */
 public class CreateTool extends ToolBase {
 
-  public CreateTool() {
-    this(CLIO.getOutStream());
-  }
+  private static final Option COLLECTION_NAME_OPTION =
+      Option.builder("c")
+          .longOpt("name")
+          .hasArg()
+          .argName("NAME")
+          .required()
+          .desc("Name of collection or core to create.")
+          .build();
 
-  public CreateTool(PrintStream stdout) {
-    super(stdout);
+  private static final Option SHARDS_OPTION =
+      Option.builder("sh")
+          .longOpt("shards")
+          .hasArg()
+          .argName("#")
+          .type(Integer.class)
+          .desc("Number of shards; default is 1.")
+          .build();
+
+  private static final Option REPLICATION_FACTOR_OPTION =
+      Option.builder("rf")
+          .longOpt("replication-factor")
+          .hasArg()
+          .argName("#")
+          .type(Integer.class)
+          .desc(
+              "Number of copies of each document across the collection (replicas per shard); default is 1.")
+          .build();
+
+  private static final Option CONF_DIR_OPTION =
+      Option.builder("d")
+          .longOpt("conf-dir")
+          .hasArg()
+          .argName("DIR")
+          .desc(
+              "Configuration directory to copy when creating the new collection; default is "
+                  + DefaultValues.DEFAULT_CONFIG_SET
+                  + '.')
+          .build();
+
+  private static final Option CONF_NAME_OPTION =
+      Option.builder("n")
+          .longOpt("conf-name")
+          .hasArg()
+          .argName("NAME")
+          .desc("Configuration name; default is the collection name.")
+          .build();
+
+  public CreateTool(ToolRuntime runtime) {
+    super(runtime);
   }
 
   @Override
@@ -75,101 +114,24 @@ public class CreateTool extends ToolBase {
   }
 
   @Override
-  public List<Option> getOptions() {
-    return List.of(
-        Option.builder("c")
-            .longOpt("name")
-            .hasArg()
-            .argName("NAME")
-            .required(true)
-            .desc("Name of collection or core to create.")
-            .build(),
-        Option.builder("sh")
-            .longOpt("shards")
-            .hasArg()
-            .argName("#")
-            .desc("Number of shards; default is 1.")
-            .build(),
-        Option.builder("rf")
-            .longOpt("replication-factor")
-            .hasArg()
-            .argName("#")
-            .desc(
-                "Number of copies of each document across the collection (replicas per shard); default is 1.")
-            .build(),
-        Option.builder()
-            .longOpt("replicationFactor")
-            .deprecated(
-                DeprecatedAttributes.builder()
-                    .setForRemoval(true)
-                    .setSince("9.7")
-                    .setDescription("Use --replication-factor instead")
-                    .get())
-            .hasArg()
-            .argName("#")
-            .required(false)
-            .desc(
-                "Number of copies of each document across the collection (replicas per shard); default is 1.")
-            .build(),
-        Option.builder("d")
-            .longOpt("conf-dir")
-            .argName("DIR")
-            .hasArg()
-            .desc(
-                "Configuration directory to copy when creating the new collection; default is "
-                    + SolrCLI.DEFAULT_CONFIG_SET
-                    + '.')
-            .build(),
-        Option.builder("confdir")
-            .longOpt("confdir")
-            .deprecated(
-                DeprecatedAttributes.builder()
-                    .setForRemoval(true)
-                    .setSince("9.7")
-                    .setDescription("Use --conf-dir instead")
-                    .get())
-            .argName("DIR")
-            .hasArg()
-            .required(false)
-            .desc(
-                "Configuration directory to copy when creating the new collection; default is "
-                    + SolrCLI.DEFAULT_CONFIG_SET
-                    + '.')
-            .build(),
-        Option.builder("n")
-            .longOpt("conf-name")
-            .argName("NAME")
-            .hasArg()
-            .required(false)
-            .desc("Configuration name; default is the collection name.")
-            .build(),
-        Option.builder("confname")
-            .longOpt("confname")
-            .deprecated(
-                DeprecatedAttributes.builder()
-                    .setForRemoval(true)
-                    .setSince("9.7")
-                    .setDescription("Use --conf-name instead")
-                    .get())
-            .argName("NAME")
-            .hasArg()
-            .required(false)
-            .desc("Configuration name; default is the collection name.")
-            .build(),
-        SolrCLI.OPTION_SOLRURL,
-        SolrCLI.OPTION_SOLRURL_DEPRECATED,
-        SolrCLI.OPTION_SOLRURL_DEPRECATED_SHORT,
-        SolrCLI.OPTION_ZKHOST,
-        SolrCLI.OPTION_ZKHOST_DEPRECATED,
-        SolrCLI.OPTION_CREDENTIALS);
+  public Options getOptions() {
+    Options opts =
+        super.getOptions()
+            .addOption(COLLECTION_NAME_OPTION)
+            .addOption(SHARDS_OPTION)
+            .addOption(REPLICATION_FACTOR_OPTION)
+            .addOption(CONF_DIR_OPTION)
+            .addOption(CONF_NAME_OPTION)
+            .addOption(CommonCLIOptions.CREDENTIALS_OPTION)
+            .addOptionGroup(getConnectionOptions());
+
+    return opts;
   }
 
   @Override
   public void runImpl(CommandLine cli) throws Exception {
-    SolrCLI.raiseLogLevelUnlessVerbose(cli);
-
-    try (var solrClient = SolrCLI.getSolrClient(cli)) {
-      if (SolrCLI.isCloudMode(solrClient)) {
+    try (var solrClient = CLIUtils.getSolrClient(cli)) {
+      if (CLIUtils.isCloudMode(solrClient)) {
         createCollection(cli);
       } else {
         createCore(cli, solrClient);
@@ -178,18 +140,17 @@ public class CreateTool extends ToolBase {
   }
 
   protected void createCore(CommandLine cli, SolrClient solrClient) throws Exception {
-    String coreName = cli.getOptionValue("name");
-    String solrUrl = cli.getOptionValue("solr-url", SolrCLI.getDefaultSolrUrl());
+    String coreName = cli.getOptionValue(COLLECTION_NAME_OPTION);
+    String solrUrl =
+        cli.getOptionValue(CommonCLIOptions.SOLR_URL_OPTION, CLIUtils.getDefaultSolrUrl());
 
     final String solrInstallDir = System.getProperty("solr.install.dir");
     final String confDirName =
-        cli.hasOption("confdir")
-            ? cli.getOptionValue("confdir")
-            : cli.getOptionValue("conf-dir", SolrCLI.DEFAULT_CONFIG_SET);
+        cli.getOptionValue(CONF_DIR_OPTION, DefaultValues.DEFAULT_CONFIG_SET);
 
     // we allow them to pass a directory instead of a configset name
-    Path configsetDir = Paths.get(confDirName);
-    Path solrInstallDirPath = Paths.get(solrInstallDir);
+    Path configsetDir = Path.of(confDirName);
+    Path solrInstallDirPath = Path.of(solrInstallDir);
 
     if (!Files.isDirectory(configsetDir)) {
       ensureConfDirExists(solrInstallDirPath, configsetDir);
@@ -198,23 +159,22 @@ public class CreateTool extends ToolBase {
 
     String coreRootDirectory; // usually same as solr home, but not always
 
-    Map<String, Object> systemInfo =
-        solrClient
-            .request(new GenericSolrRequest(SolrRequest.METHOD.GET, CommonParams.SYSTEM_INFO_PATH))
-            .asMap();
+    NamedList<?> systemInfo =
+        solrClient.request(
+            new GenericSolrRequest(SolrRequest.METHOD.GET, CommonParams.SYSTEM_INFO_PATH));
 
     // convert raw JSON into user-friendly output
     coreRootDirectory = (String) systemInfo.get("core_root");
 
-    if (SolrCLI.safeCheckCoreExists(
-        solrUrl, coreName, cli.getOptionValue(SolrCLI.OPTION_CREDENTIALS.getLongOpt()))) {
+    if (CLIUtils.safeCheckCoreExists(
+        solrUrl, coreName, cli.getOptionValue(CommonCLIOptions.CREDENTIALS_OPTION))) {
       throw new IllegalArgumentException(
           "\nCore '"
               + coreName
               + "' already exists!\nChecked core existence using Core API command");
     }
 
-    Path coreInstanceDir = Paths.get(coreRootDirectory, coreName);
+    Path coreInstanceDir = Path.of(coreRootDirectory, coreName);
     Path confDir = getFullConfDir(solrInstallDirPath, configsetDir).resolve("conf");
     if (!Files.isDirectory(coreInstanceDir)) {
       Files.createDirectories(coreInstanceDir);
@@ -223,7 +183,7 @@ public class CreateTool extends ToolBase {
             "Failed to create new core instance directory: " + coreInstanceDir.toAbsolutePath());
       }
 
-      FileUtils.copyDirectoryToDirectory(confDir.toFile(), coreInstanceDir.toFile());
+      PathUtils.copyDirectory(confDir, coreInstanceDir, StandardCopyOption.COPY_ATTRIBUTES);
 
       echoIfVerbose(
           "\nCopying configuration to new core instance directory:\n"
@@ -254,10 +214,10 @@ public class CreateTool extends ToolBase {
             .withConnectionTimeout(15, TimeUnit.SECONDS)
             .withKeyStoreReloadInterval(-1, TimeUnit.SECONDS)
             .withOptionalBasicAuthCredentials(
-                cli.getOptionValue(SolrCLI.OPTION_CREDENTIALS.getLongOpt()));
-    String zkHost = SolrCLI.getZkHost(cli);
+                cli.getOptionValue(CommonCLIOptions.CREDENTIALS_OPTION));
+    String zkHost = CLIUtils.getZkHost(cli);
     echoIfVerbose("Connecting to ZooKeeper at " + zkHost);
-    try (CloudSolrClient cloudSolrClient = SolrCLI.getCloudHttp2SolrClient(zkHost, builder)) {
+    try (CloudSolrClient cloudSolrClient = CLIUtils.getCloudHttp2SolrClient(zkHost, builder)) {
       cloudSolrClient.connect();
       createCollection(cloudSolrClient, cli);
     }
@@ -266,18 +226,12 @@ public class CreateTool extends ToolBase {
   protected void createCollection(CloudSolrClient cloudSolrClient, CommandLine cli)
       throws Exception {
 
-    String collectionName = cli.getOptionValue("name");
+    String collectionName = cli.getOptionValue(COLLECTION_NAME_OPTION);
     final String solrInstallDir = System.getProperty("solr.install.dir");
-    String confName =
-        cli.hasOption("conf-name")
-            ? cli.getOptionValue("conf-name")
-            : cli.getOptionValue("confname");
-    String confDir =
-        cli.hasOption("confdir")
-            ? cli.getOptionValue("confdir")
-            : cli.getOptionValue("conf-dir", SolrCLI.DEFAULT_CONFIG_SET);
-    Path solrInstallDirPath = Paths.get(solrInstallDir);
-    Path confDirPath = Paths.get(confDir);
+    String confName = cli.getOptionValue(CONF_NAME_OPTION);
+    String confDir = cli.getOptionValue(CONF_DIR_OPTION, DefaultValues.DEFAULT_CONFIG_SET);
+    Path solrInstallDirPath = Path.of(solrInstallDir);
+    Path confDirPath = Path.of(confDir);
     ensureConfDirExists(solrInstallDirPath, confDirPath);
     printDefaultConfigsetWarningIfNecessary(cli);
 
@@ -287,21 +241,15 @@ public class CreateTool extends ToolBase {
           "No live nodes found! Cannot create a collection until "
               + "there is at least 1 live node in the cluster.");
 
-    String solrUrl = cli.getOptionValue("solr-url");
+    String solrUrl = cli.getOptionValue(CommonCLIOptions.SOLR_URL_OPTION);
     if (solrUrl == null) {
       String firstLiveNode = liveNodes.iterator().next();
       solrUrl = ZkStateReader.from(cloudSolrClient).getBaseUrlForNodeName(firstLiveNode);
     }
 
     // build a URL to create the collection
-    int numShards = Integer.parseInt(cli.getOptionValue("shards", String.valueOf(1)));
-    int replicationFactor = 1;
-
-    if (cli.hasOption("replication-factor")) {
-      replicationFactor = Integer.parseInt(cli.getOptionValue("replication-factor"));
-    } else if (cli.hasOption("replicationFactor")) {
-      replicationFactor = Integer.parseInt(cli.getOptionValue("replicationFactor"));
-    }
+    int numShards = cli.getParsedOptionValue(SHARDS_OPTION, 1);
+    int replicationFactor = cli.getParsedOptionValue(REPLICATION_FACTOR_OPTION, 1);
 
     boolean configExistsInZk =
         confName != null
@@ -310,9 +258,7 @@ public class CreateTool extends ToolBase {
                 .getZkClient()
                 .exists("/configs/" + confName, true);
 
-    if (CollectionAdminParams.SYSTEM_COLL.equals(collectionName)) {
-      // do nothing
-    } else if (configExistsInZk) {
+    if (configExistsInZk) {
       echo("Re-using existing configuration directory " + confName);
     } else { // if (confdir != null && !confdir.trim().isEmpty()) {
       if (confName == null || confName.trim().isEmpty()) {
@@ -320,7 +266,7 @@ public class CreateTool extends ToolBase {
       }
 
       // TODO: This should be done using the configSet API
-      final Path configsetsDirPath = SolrCLI.getConfigSetsDir(solrInstallDirPath);
+      final Path configsetsDirPath = CLIUtils.getConfigSetsDir(solrInstallDirPath);
       ConfigSetService configSetService =
           new ZkConfigSetService(ZkStateReader.from(cloudSolrClient).getZkClient());
       Path confPath = ConfigSetService.getConfigsetPath(confDir, configsetsDirPath.toString());
@@ -333,12 +279,12 @@ public class CreateTool extends ToolBase {
               + " to ZooKeeper at "
               + cloudSolrClient.getClusterStateProvider().getQuorumHosts());
       // We will trust the config since we have the Zookeeper Address
-      configSetService.uploadConfig(confName, confPath, true);
+      configSetService.uploadConfig(confName, confPath);
     }
 
     // since creating a collection is a heavy-weight operation, check for existence first
-    if (SolrCLI.safeCheckCollectionExists(
-        solrUrl, collectionName, cli.getOptionValue(SolrCLI.OPTION_CREDENTIALS.getLongOpt()))) {
+    if (CLIUtils.safeCheckCollectionExists(
+        solrUrl, collectionName, cli.getOptionValue(CommonCLIOptions.CREDENTIALS_OPTION))) {
       throw new IllegalStateException(
           "\nCollection '"
               + collectionName
@@ -364,7 +310,7 @@ public class CreateTool extends ToolBase {
     if (isVerbose()) {
       // pretty-print the response to stdout
       CharArr arr = new CharArr();
-      new JSONWriter(arr, 2).write(response.asMap());
+      new JSONWriter(arr, 2).write(response.asMap(10));
       echo(arr.toString());
     }
     String endMessage =
@@ -382,7 +328,7 @@ public class CreateTool extends ToolBase {
   }
 
   private Path getFullConfDir(Path solrInstallDir, Path confDirName) {
-    return SolrCLI.getConfigSetsDir(solrInstallDir).resolve(confDirName);
+    return CLIUtils.getConfigSetsDir(solrInstallDir).resolve(confDirName);
   }
 
   private void ensureConfDirExists(Path solrInstallDir, Path confDirName) {
@@ -391,22 +337,21 @@ public class CreateTool extends ToolBase {
       Path fullConfDir = getFullConfDir(solrInstallDir, confDirName);
       if (!Files.isDirectory(fullConfDir)) {
         echo("Specified configuration directory " + confDirName + " not found!");
-        System.exit(1);
+        runtime.exit(1);
       }
     }
   }
 
   private void printDefaultConfigsetWarningIfNecessary(CommandLine cli) {
     final String confDirectoryName =
-        cli.hasOption("confdir")
-            ? cli.getOptionValue("confdir")
-            : cli.getOptionValue("conf-dir", SolrCLI.DEFAULT_CONFIG_SET);
-    final String confName = cli.getOptionValue("confname", "");
+        cli.getOptionValue(CONF_DIR_OPTION, DefaultValues.DEFAULT_CONFIG_SET);
+    final String confName = cli.getOptionValue(CONF_NAME_OPTION, "");
 
     if (confDirectoryName.equals("_default")
         && (confName.equals("") || confName.equals("_default"))) {
-      final String collectionName = cli.getOptionValue("name");
-      final String solrUrl = cli.getOptionValue("solrUrl", SolrCLI.getDefaultSolrUrl());
+      final String collectionName = cli.getOptionValue(COLLECTION_NAME_OPTION);
+      final String solrUrl =
+          cli.getOptionValue(CommonCLIOptions.SOLR_URL_OPTION, CLIUtils.getDefaultSolrUrl());
       final String curlCommand =
           String.format(
               Locale.ROOT,
