@@ -18,7 +18,7 @@ package org.apache.solr.ltr;
 
 import java.io.IOException;
 import java.lang.invoke.MethodHandles;
-import java.nio.file.Paths;
+import java.nio.file.Path;
 import java.util.ArrayList;
 import java.util.Collections;
 import java.util.HashMap;
@@ -56,7 +56,7 @@ public class TestLTRReRankingPipeline extends SolrTestCaseJ4 {
   private static final Logger log = LoggerFactory.getLogger(MethodHandles.lookup().lookupClass());
 
   private static final SolrResourceLoader solrResourceLoader =
-      new SolrResourceLoader(Paths.get("").toAbsolutePath());
+      new SolrResourceLoader(Path.of("").toAbsolutePath());
 
   @BeforeClass
   public static void setup() throws Exception {
@@ -120,9 +120,9 @@ public class TestLTRReRankingPipeline extends SolrTestCaseJ4 {
       final SolrIndexSearcher searcher = solrQueryRequest.getSearcher();
       // first run the standard query
       TopDocs hits = searcher.search(bqBuilder.build(), 10);
-      assertEquals(2, hits.totalHits.value);
-      assertEquals("0", searcher.doc(hits.scoreDocs[0].doc).get("id"));
-      assertEquals("1", searcher.doc(hits.scoreDocs[1].doc).get("id"));
+      assertEquals(2, hits.totalHits.value());
+      assertEquals("0", searcher.getDocFetcher().doc(hits.scoreDocs[0].doc).get("id"));
+      assertEquals("1", searcher.getDocFetcher().doc(hits.scoreDocs[1].doc).get("id"));
 
       final List<Feature> features = makeFieldValueFeatures(new int[] {0, 1, 2}, "finalScore");
       final List<Normalizer> norms =
@@ -145,8 +145,8 @@ public class TestLTRReRankingPipeline extends SolrTestCaseJ4 {
       hits = rescorer.rescore(searcher, hits, 2);
 
       // rerank using the field finalScore
-      assertEquals("1", searcher.doc(hits.scoreDocs[0].doc).get("id"));
-      assertEquals("0", searcher.doc(hits.scoreDocs[1].doc).get("id"));
+      assertEquals("1", searcher.getDocFetcher().doc(hits.scoreDocs[0].doc).get("id"));
+      assertEquals("0", searcher.getDocFetcher().doc(hits.scoreDocs[1].doc).get("id"));
     }
   }
 
@@ -171,13 +171,13 @@ public class TestLTRReRankingPipeline extends SolrTestCaseJ4 {
 
       // first run the standard query
       TopDocs hits = searcher.search(bqBuilder.build(), 10);
-      assertEquals(5, hits.totalHits.value);
+      assertEquals(5, hits.totalHits.value());
 
-      assertEquals("0", searcher.doc(hits.scoreDocs[0].doc).get("id"));
-      assertEquals("1", searcher.doc(hits.scoreDocs[1].doc).get("id"));
-      assertEquals("2", searcher.doc(hits.scoreDocs[2].doc).get("id"));
-      assertEquals("3", searcher.doc(hits.scoreDocs[3].doc).get("id"));
-      assertEquals("4", searcher.doc(hits.scoreDocs[4].doc).get("id"));
+      assertEquals("0", searcher.getDocFetcher().doc(hits.scoreDocs[0].doc).get("id"));
+      assertEquals("1", searcher.getDocFetcher().doc(hits.scoreDocs[1].doc).get("id"));
+      assertEquals("2", searcher.getDocFetcher().doc(hits.scoreDocs[2].doc).get("id"));
+      assertEquals("3", searcher.getDocFetcher().doc(hits.scoreDocs[3].doc).get("id"));
+      assertEquals("4", searcher.getDocFetcher().doc(hits.scoreDocs[4].doc).get("id"));
 
       final List<Feature> features = makeFieldValueFeatures(new int[] {0, 1, 2}, "finalScoreFloat");
       final List<Normalizer> norms =
@@ -201,11 +201,11 @@ public class TestLTRReRankingPipeline extends SolrTestCaseJ4 {
 
       // rerank @ 0 should not change the order
       hits = rescorer.rescore(searcher, hits, 0);
-      assertEquals("0", searcher.doc(hits.scoreDocs[0].doc).get("id"));
-      assertEquals("1", searcher.doc(hits.scoreDocs[1].doc).get("id"));
-      assertEquals("2", searcher.doc(hits.scoreDocs[2].doc).get("id"));
-      assertEquals("3", searcher.doc(hits.scoreDocs[3].doc).get("id"));
-      assertEquals("4", searcher.doc(hits.scoreDocs[4].doc).get("id"));
+      assertEquals("0", searcher.getDocFetcher().doc(hits.scoreDocs[0].doc).get("id"));
+      assertEquals("1", searcher.getDocFetcher().doc(hits.scoreDocs[1].doc).get("id"));
+      assertEquals("2", searcher.getDocFetcher().doc(hits.scoreDocs[2].doc).get("id"));
+      assertEquals("3", searcher.getDocFetcher().doc(hits.scoreDocs[3].doc).get("id"));
+      assertEquals("4", searcher.getDocFetcher().doc(hits.scoreDocs[4].doc).get("id"));
 
       // test rerank with different topN cuts
 
@@ -219,9 +219,13 @@ public class TestLTRReRankingPipeline extends SolrTestCaseJ4 {
         hits = rescorer.rescore(searcher, hits, topN);
         for (int i = topN - 1, j = 0; i >= 0; i--, j++) {
           if (log.isInfoEnabled()) {
-            log.info("doc {} in pos {}", searcher.doc(hits.scoreDocs[j].doc).get("id"), j);
+            log.info(
+                "doc {} in pos {}",
+                searcher.getDocFetcher().doc(hits.scoreDocs[j].doc).get("id"),
+                j);
           }
-          assertEquals(i, Integer.parseInt(searcher.doc(hits.scoreDocs[j].doc).get("id")));
+          assertEquals(
+              i, Integer.parseInt(searcher.getDocFetcher().doc(hits.scoreDocs[j].doc).get("id")));
           assertEquals((i + 1) * features.size() * featureWeight, hits.scoreDocs[j].score, 0.00001);
         }
       }
@@ -241,11 +245,13 @@ public class TestLTRReRankingPipeline extends SolrTestCaseJ4 {
       LTRScoringQuery query = new LTRScoringQuery(ltrScoringModel);
       query.setRequest(solrQueryRequest);
       LTRScoringQuery.ModelWeight wgt = query.createWeight(null, ScoreMode.COMPLETE, 1f);
-      LTRScoringQuery.ModelWeight.ModelScorer modelScr = wgt.scorer(null);
+      LTRScoringQuery.ModelWeight.ModelScorer modelScr = wgt.modelScorer(null);
       modelScr.getDocInfo().setOriginalDocScore(1f);
       for (final Scorable.ChildScorable feat : modelScr.getChildren()) {
         assertNotNull(
-            ((Feature.FeatureWeight.FeatureScorer) feat.child).getDocInfo().getOriginalDocScore());
+            ((Feature.FeatureWeight.FeatureScorer) feat.child())
+                .getDocInfo()
+                .getOriginalDocScore());
       }
 
       features = makeFieldValueFeatures(new int[] {0, 1, 2}, "finalScore");
@@ -257,11 +263,13 @@ public class TestLTRReRankingPipeline extends SolrTestCaseJ4 {
       query = new LTRScoringQuery(ltrScoringModel);
       query.setRequest(solrQueryRequest);
       wgt = query.createWeight(null, ScoreMode.COMPLETE, 1f);
-      modelScr = wgt.scorer(null);
+      modelScr = wgt.modelScorer(null);
       modelScr.getDocInfo().setOriginalDocScore(1f);
       for (final Scorable.ChildScorable feat : modelScr.getChildren()) {
         assertNotNull(
-            ((Feature.FeatureWeight.FeatureScorer) feat.child).getDocInfo().getOriginalDocScore());
+            ((Feature.FeatureWeight.FeatureScorer) feat.child())
+                .getDocInfo()
+                .getOriginalDocScore());
       }
     }
   }
